<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/Perf_Mail_title">
		<EditTextPreference
			android:key="toMail_adr"
			android:title="@string/Perf_Mail_DestMailAdr_title"
			android:summary="@string/Perf_Mail_DestMailAdr_summary"
			android:dialogTitle="@string/Perf_Mail_DestMailAdr_dialogTitle" />
		<EditTextPreference
			android:key="fromMail_adr"
			android:title="@string/Perf_Mail_FromMailAdr_title"
			android:summary="@string/Perf_Mail_FromMailAdr_summary"
			android:dialogTitle="@string/Perf_Mail_FromMailAdr_dialogTitle" />
		<EditTextPreference
			android:key="Mail_Subject"
			android:title="メールタイトル"
			android:summary="○○君の位置情報"
			android:dialogTitle="メールタイトル"
			android:defaultValue="○○君の位置情報" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/Perf_Gmail_title">
		<EditTextPreference
			android:key="Gmail_account"
			android:title="@string/Perf_Gmail_account_title"
			android:summary="@string/Perf_Gmail_account_summary"
			android:dialogTitle="Gmail UserName" />
		<EditTextPreference
			android:key="Gmail_password"
			android:title="@string/Perf_Gmail_password_title"
			android:summary="@string/Perf_Gmail_password_summary"
			android:dialogTitle="Gmail Password"
			 />
	</PreferenceCategory>
	
</PreferenceScreen>
